Adding User creation endpoint
